[package]
name = "trussed-pqc-backend"
version = "0.1.0"
edition = "2021"
description = "Trussed backend adding support for post-quantum cryptography"
authors = [
    "Sandbox AQ <support@sandboxaq.com>"
]
license = "Apache-2.0 OR MIT"

[dependencies]
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
der = "0.7.9"
pkcs8 = {version = "0.10.2", features = ["alloc"]}
# TODO: update this
#trussed = { git = "https://github.com/Nitrokey/trussed.git", tag = "v0.1.0-nitrokey.23" } 
trussed = {path = "../trussed" }
trussed-core = {path = "../trussed/core" }
serde-big-array = "0.5.1"
pqcrypto = "0.17.0"
pqcrypto-mldsa = "0.1.0"
cosey = "0.3"

[dev-dependencies]
hex-literal = "0.3.4"
test-log = "0.2.11"

[patch.crates-io]
# For local development only
# Must be patched to force the Nitrokey/trussed repo to use this version
littlefs2 = { git = "https://github.com/trussed-dev/littlefs2.git", rev = "960e57d9fc0d209308c8e15dc2625", version = "0.4.0" } 
cosey = { path = "../cosey" }

[features]
virt = ["std", "trussed/virt"]
std = []

# Algorithms to enable
mldsa44 = ["trussed/mldsa44", "cosey/mldsa44"]
mldsa65 = ["trussed/mldsa65", "cosey/mldsa65"]
mldsa87 = ["trussed/mldsa87", "cosey/mldsa87"]